<resources>
    <string name="app_name">掌上农大</string>
    <string name="fafu">福建农林大学...</string>
    <string name="home">首 页</string>
    <string name="classify">分 类</string>
    <string name="user">个人中心</string>
    <string name="focus">农大要闻</string>
    <string name="announcement">公示公告</string>
    <string name="campusCulture">文化校园</string>
    <string name="collegeTends">学院动态</string>
    <string name="academicTends">教务动态</string>
    <string name="loading">加载中...</string>
    <string name="course">课程表</string>
    <string name="library">图书馆</string>
    <string name="community">校园社区</string>
    <string name="weather">天气</string>
    <string name="periphery">周边游</string>
    <string name="route">出行规划</string>
    <string name="bus">公交查询</string>
    <string name="mapSearch">周边搜索</string>
    <string name="weather_live">实时</string>
    <string name="report_time">发布时间</string>
    <string name="weather_forecast">预报</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_course">CourseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //课程表
    <string name="input_username">教务管理系统账号</string>
    <string name="input_password">教务管理系统密码</string>
    <string name="verificationCode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="input_verificationCode">请输入验证码</string>
    <string name="select_time">请选择查询时间</string>
    <string name="school_year">学年</string>
    <string name="term">学期</string>
</resources>
