<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_fafu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:inputType="number"
        android:drawableLeft="@drawable/username"
        android:background="@drawable/bg_edit"
        android:hint="@string/input_username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_below="@id/username"
        android:drawableLeft="@drawable/password"
        android:hint="@string/input_password"
        android:background="@drawable/bg_edit"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/password"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_inputVerificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:digits="@string/verificationCode"
            android:drawableLeft="@drawable/verification_code"
            android:hint="@string/input_verificationCode"
            android:background="@drawable/bg_edit"
            android:maxLength="4"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/iv_VerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_failed" />

        <ImageView
            android:id="@+id/iv_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/reload" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_term"
        android:layout_margin="5dp"
        android:layout_below="@+id/ll_code"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_school_year"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_year"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_term"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/ll_term"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:text="登录"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_login_selector"/>

    </LinearLayout>

</RelativeLayout>